--- a/app/assets/stylesheets/components/_shift-card.scss
+++ b/app/assets/stylesheets/components/_shift-card.scss
@@ -73,9 +73,9 @@
 .shift-card-drop {
   background-color: $lighter-purple;
   color: black;
-  position: relative;
-  width: 313px;
   border: none;
+  padding: 10px 20px;
+  border-radius: 10px;
 }
 
 // .shift-card-drop-details {
